# dojo5_tech

./: README.md
hello-dojo/: Cargo.toml  memory.x
hello-dojo/src/: main.rs
