[package]
authors = ["Marcus DuFrane <marcusdufrane@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "hello-dojo"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2.0"

[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["stm32f407"]

# this lets you use `cargo fix`!
[[bin]]
name = "hello-dojo"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
